cluster/deploy-local-relational.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: owlvey
    tier: state  
  name: owlvey-state-local-deployment
  namespace: owlvey
spec:
  replicas: 1
  selector:
    matchLabels:
        key: owlvey-relational-pod
  template:
    metadata:
      labels:
        key: owlvey-relational-pod
    spec:
      containers:
        - name: db
          image: localhost:48700/owlvey/relational:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 1433
