cluster/service-api-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-api
  namespace: owlvey
spec:
  # ClusterIP NodePort LoadBalancer
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 48100
      targetPort: 5000
---
apiVersion: v1
kind: Endpoints
apiVersion: v1
metadata:
 name: service-api
 namespace: owlvey
subsets:
 - addresses:
     - ip: 192.168.0.14
   ports:
     - port: 5000
