cluster/service-local-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-api
  namespace: owlvey
spec:  
  type: ClusterIP
  selector:
    key: owlvey-api-pod
  ports:
    - name: api
      protocol: TCP      
      port: 48100
      targetPort: 80
