cluster/service-relational.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-state
  namespace: owlvey
spec:  
  type: ClusterIP
  selector:
    key: owlvey-relational-pod
  ports:
    - name: api
      protocol: TCP      
      port: 48203
      targetPort: 1433
